@@ -1,3 +1,15 @@
+2021-09-03  Ross Kirsling  <ross.kirsling@sony.com>
+
+        [JSC] Yarr::ByteTerm sometimes leaves fields uninitialized
+        https://bugs.webkit.org/show_bug.cgi?id=229891
+
+        Reviewed by Yusuke Suzuki.
+
+        * yarr/YarrInterpreter.h:
+        (JSC::Yarr::ByteTerm::ByteTerm):
+        Default initialize `frameLocation` and `inputPosition`.
+        (Also, use initializer list where possible.)
+
 2021-09-03  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] Implement Temporal.TimeZone
